Editor reskin: edit summary linespacing too low (bugid:5698)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@38086 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageLayout/css/core/modules.scss
+++ b/extensions/wikia/EditPageLayout/css/core/modules.scss
@@ -55,7 +55,7 @@
 		textarea {
 			@include epl-textfield;
 			height: 27px;
-			line-height: 13px;
+			line-height: 23px;
 			margin: 5px 0 10px 0;
 			padding: 7px 8px;
 			resize: none; /* remove resize grip in Webkit / Fx4 */
